--- a/src/main/resources/com/oop/mahadi/akashdth1/newView.fxml
+++ b/src/main/resources/com/oop/mahadi/akashdth1/newView.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.oop.mahadi.akashdth1.NewViewController">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.oop.mahadi.akashdth1.tecnachianCintrollerReqVire.NewViewController">
    <children>
       <Label layoutX="194.0" layoutY="110.0" text="Label" />
    </children>
