name change package and doing work in my tec views

--- a/src/main/resources/com/oop/mahadi/akashdth1/TecnachianDashbordView.fxml
+++ b/src/main/resources/com/oop/mahadi/akashdth1/TecnachianDashbordView.fxml
@@ -4,20 +4,20 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.oop.mahadi.akashdth1.tecnachianCintrollerReqVire.TecnachianDashbordViewController">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.oop.mahadi.akashdth1.TecnachianDashBoaedController.TecnachianDashbordViewController">
    <children>
-      <Label fx:id="idFxidLavelShow" layoutX="491.0" layoutY="14.0" prefHeight="17.0" prefWidth="162.0" text="Id" />
+      <Label fx:id="idFxidLavelShow" layoutX="333.0" layoutY="307.0" prefHeight="17.0" prefWidth="162.0" text="Id" />
       <Button layoutX="141.0" layoutY="109.0" mnemonicParsing="false" onAction="#FeedbackButton" text="Feedback" />
       <Button layoutX="139.0" layoutY="64.0" mnemonicParsing="false" onAction="#workReqButton" text="Work Req" />
-      <Button layoutX="399.0" layoutY="109.0" mnemonicParsing="false" onAction="#addRow" text="Performance graph" />
-      <Button layoutX="316.0" layoutY="109.0" mnemonicParsing="false" onAction="#addRow" text="Documents" />
-      <Button layoutX="232.0" layoutY="109.0" mnemonicParsing="false" onAction="#addRow" text="Application" />
+      <Button layoutX="399.0" layoutY="109.0" mnemonicParsing="false" onAction="#perforManceButton" text="Performance graph" />
+      <Button layoutX="316.0" layoutY="109.0" mnemonicParsing="false" onAction="#DocumrntDutton" text="Documents" />
+      <Button layoutX="232.0" layoutY="109.0" mnemonicParsing="false" onAction="#ApplicationButton" text="Application" />
       <Button layoutX="479.0" layoutY="64.0" mnemonicParsing="false" onAction="#RatingButton" text="Rating" />
       <Button layoutX="348.0" layoutY="64.0" mnemonicParsing="false" onAction="#CustomerProfileButton" text="Customer profile" />
       <Button layoutX="232.0" layoutY="64.0" mnemonicParsing="false" onAction="#submitdetailsButton" text="Submit Details" />
-      <Button layoutX="626.0" layoutY="521.0" mnemonicParsing="false" onAction="#backButton" text="Back" />
+      <Button layoutX="429.0" layoutY="506.0" mnemonicParsing="false" onAction="#backButton" prefHeight="25.0" prefWidth="201.0" text="Back" />
       <Label layoutX="53.0" layoutY="14.0" text="Tecnachian dashboard" />
       <Label layoutX="232.0" layoutY="270.0" text="Will show tecnacian name and id here" />
-      <Label fx:id="nameFxidLavelShow" layoutX="270.0" layoutY="14.0" text="Name" />
+      <Label fx:id="nameFxidLavelShow" layoutX="232.0" layoutY="307.0" text="Name" />
    </children>
 </AnchorPane>
