--- a/src/main/resources/com/oop/mahadi/akashdth1/ViewSerViseReq.fxml
+++ b/src/main/resources/com/oop/mahadi/akashdth1/ViewSerViseReq.fxml
@@ -1,14 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.oop.mahadi.akashdth1.TecnachianDashBoaedController.ViewSerViseReqController"
-            prefHeight="400.0" prefWidth="600.0">
 
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.oop.mahadi.akashdth1.TecnachianControllere.ViewSerViseReqController">
+   <children>
+      <ComboBox fx:id="comSerFXid" layoutX="80.0" layoutY="75.0" onAction="#comSerFXidOnClick" prefWidth="150.0" />
+      <Label layoutX="31.0" layoutY="79.0" text="Ser Id" />
+      <TextArea fx:id="textAreafxid" layoutX="42.0" layoutY="137.0" prefHeight="200.0" prefWidth="398.0" />
+      <Button layoutX="615.0" layoutY="537.0" mnemonicParsing="false" onAction="#backButton" text="Back" />
+      <Button layoutX="55.0" layoutY="524.0" mnemonicParsing="false" onAction="#acceptforworkonActionbutton" prefHeight="25.0" prefWidth="200.0" text="Accept for work" />
+   </children>
 </AnchorPane>
