--- a/src/main/resources/com/oop/mahadi/akashdth1/myView.fxml
+++ b/src/main/resources/com/oop/mahadi/akashdth1/myView.fxml
@@ -8,7 +8,7 @@
 
 <AnchorPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.oop.mahadi.akashdth1.TecnachianViewCustomerProfileContoller.TecnachianViewProfileCustomerContoller"
+            fx:controller="com.oop.mahadi.akashdth1.MyViewCpntroller"
             prefHeight="400.0" prefWidth="600.0">
 
 </AnchorPane>
